\name{NEWS}
\title{News for Package \pkg{cerebroApp}}

\section{Changes in version 1.2.2}{
\itemize{
    \item Fixes:
    \itemize{
      \item \texttt{getEnrichedPathways()} no longer results in an error when marker genes are present but no database returns any enriched pathways, e.g. because there are too few marker genes. Thanks to \href{@turkeyri}{https://github.com/turkeyri} for pointing it out and suggesting a solution!
    }
}}

\section{Changes in version 1.2.1}{
\itemize{
    \item New features:
      \item It is now possible to select cells in the dimensional reduction plots ('Overview', 'Gene expression', and 'Gene set expression' tabs) and retrieve additional info for them. For example, users can get tables of meta data or expression values and save them as a file for further analysis. Also, gene expression can be shown in the selected vs. non-selected cells.
    \item Small changes:
    \itemize{
      \item Scales for expression levels by sample and cluster in "Gene expression" and "Gene set expression" tabs are now set to be from 0 to 1.2 times the highest value. This is to limit the violin plots which cannot be trimed to the actual data range and will extend beyond, giving a false impression of negative values existing in the data.
      \item Hover info in expression by gene plot in "Gene expression" and "Gene set expression" tabs now show both the gene name and the mean expression value instead of just the gene name.
    }
}}

\section{Changes in version 1.2.0}{
\itemize{
    \item New features:
    \itemize{
      \item New button for composition plots (e.g. samples by clusters or cell cycle) that allows to choose whether to scale by actual cell count (default) or percentage.
      \item New button for composition plots that allows to show/hide the respective table of numbers behind them.
      \item New tab "Color management": Users can now change the color assigned to each sample/cluster.