@@ -2,6 +2,8 @@
 
 ## Fixes
 
+- The title in the browser tab now correctly says "Cerebro" instead of containing some HTML code.
+- Cluster trees should now be displayed correctly.
 - `getEnrichedPathways()` no longer results in an error when marker genes are present but no database returns any enriched pathways, e.g. because there are too few marker genes. Thanks to @turkeyri for pointing it out and suggesting a solution!
 
 # cerebroApp 1.2.1
