@@ -5,6 +5,8 @@
 \itemize{
     \item Fixes:
     \itemize{
+      \item The title in the browser tab now correctly says "Cerebro" instead of containing some HTML code.
+      \item Cluster trees should now be displayed correctly.
       \item \texttt{getEnrichedPathways()} no longer results in an error when marker genes are present but no database returns any enriched pathways, e.g. because there are too few marker genes. Thanks to \href{@turkeyri}{https://github.com/turkeyri} for pointing it out and suggesting a solution!
     }
 }}
